remove references to weeks from all docs except _quarto.yaml add pgirmess to renv

--- a/r4babs1/week-6/overview.qmd
+++ b/r4babs1/week-6/overview.qmd
@@ -1,6 +1,6 @@
 ---
 title: Overview
-subtitle: "Week 6: Understanding file systems"
+subtitle: "Understanding file systems"
 ---
 
 This week you will carry out some independent study to ensure you have some understanding of computer file systems. We will introduce you to the concepts of paths and working directories.
