--- a/r4babs2/week-4/overview.qmd
+++ b/r4babs2/week-4/overview.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Overview"
-subtitle: "Week 4: One-way ANOVA and Kruskal-Wallis"
+subtitle: "One-way ANOVA and Kruskal-Wallis"
 ---
 
 This week you will 
