--- a/r4babs1/week-6/study_after_workshop.qmd
+++ b/r4babs1/week-6/study_after_workshop.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Independent Study to consolidate this week"
-subtitle: "Week 6: Understanding file systems"
+subtitle: "Understanding file systems"
 ---
 
 
