--- a/r4babs1/week-6/study_before_workshop.qmd
+++ b/r4babs1/week-6/study_before_workshop.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Independent Study to prepare for workshop"
-subtitle: "Week 6: Understanding file systems"
+subtitle: "Understanding file systems"
 ---
 
 1.  Watch an Introduction to Data Analysis in R for BABS 1 - 4
