--- a/r4babs1/week-6/workshop.qmd
+++ b/r4babs1/week-6/workshop.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Workshop"
-subtitle: "Week 6: Understanding file systems"
+subtitle: "Understanding file systems"
 toc: true
 toc-location: right
 ---
