--- a/r4babs1/week-9/study_after_workshop.qmd
+++ b/r4babs1/week-9/study_after_workshop.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Independent Study to consolidate this week"
-subtitle: "Week 9: Summarising data in with several variables and the role of variables in analysis"
+subtitle: "Summarising data in with several variables and the role of variables in analysis"
 format:
   html:
     code-fold: true
