--- a/r4babs2/week-1/study_before_workshop.qmd
+++ b/r4babs2/week-1/study_before_workshop.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Independent Study to prepare for workshop"
-subtitle: "Week 1: The logic of hypothesis testing and confidence intervals"
+subtitle: "The logic of hypothesis testing and confidence intervals"
 ---
 
 1. 📖 Read [The logic of hyothesis testing](https://3mmarand.github.io/comp4biosci/logic_hyopthesis_testing.html) 
