--- a/r4babs2/week-2/workshop.qmd
+++ b/r4babs2/week-2/workshop.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Workshop"
-subtitle: "Week 2: Introduction to statistical models: Single linear regression"
+subtitle: "Introduction to statistical models: Single linear regression"
 toc: true
 toc-location: right
 ---
