--- a/r4babs2/week-3/study_before_workshop.qmd
+++ b/r4babs2/week-3/study_before_workshop.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Independent Study to prepare for workshop"
-subtitle: "Week 3: Two-sample tests"
+subtitle: "Two-sample tests"
 ---
 
 1.  Prepare
