--- a/r4babs2/week-6/overview.qmd
+++ b/r4babs2/week-6/overview.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Overview"
-subtitle: "Week 6: Chi-squared tests and correlation"
+subtitle: "Chi-squared tests and correlation"
 ---
 
 This week you will 
