--- a/r4babs2/week-6/study_after_workshop.qmd
+++ b/r4babs2/week-6/study_after_workshop.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Independent Study to consolidate this week"
-subtitle: "Week 6: Chi-squared tests and correlation"
+subtitle: "Chi-squared tests and correlation"
 format:
   html:
     code-fold: true
