--- a/r4babs2/week-6/workshop.qmd
+++ b/r4babs2/week-6/workshop.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Workshop"
-subtitle: "Week 6: Chi-squared tests and correlation"
+subtitle: "Chi-squared tests and correlation"
 toc: true
 toc-location: right
 ---
